# maple-surv

./: .gitignore  main.py  pyproject.toml
config/IFMLE/tcga_luad/: cfg_vlsa_conch_ibrain001.yaml
config/SCPP/tcga_nsclc/: cfg_scpp_conch_ibrain001.yaml  cfg_scpp_nsg_conch_ibrain001.yaml
data_split/5foldcv/tcga_nsclc/: splits_0.csv  splits_1.csv  splits_2.csv  splits_3.csv  splits_4.csv  tcga_nsclc_survival.csv
dataset/: PatchWSI.py
model/: scpp.py  utils.py
runner/: __init__.py  global_cfg.py  scpp_handler.py
tools/: prep_nsclc_splits.py  survival_text_prototypes.json
